--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 
+find_package(Qt6 REQUIRED COMPONENTS Sql)
+
 set(PROJECT_SOURCES
         calcmethods.h
         calcmethods.cpp
@@ -65,3 +67,5 @@ install(TARGETS calc
 if(QT_VERSION_MAJOR EQUAL 6)
     qt_finalize_executable(calc)
 endif()
+
+target_link_libraries(calc PRIVATE Qt6::Sql)
